--- a/website_blog/index.html
+++ b/website_blog/index.html
@@ -49,7 +49,7 @@
         <img src="images/profil.png" id="gambar_profil">
         <h4>Nama Kalian</h4>
 
-        <a href="https://www.instagram.com/fahrifadhil_/">
+        <!-- <a href="https://www.instagram.com/fahrifadhil_/">
             <img src="images/instagram.png"> Instagram
         </a>
 
@@ -63,7 +63,7 @@
 
         <a href="https://medium.com/me/stories/public">
             <img src="images/facebook.png"> Facebook
-        </a>
+        </a> -->
 
         <br>
 
